Fixed overflow bug, adding more dynamic templating for 'large' screens

--- a/client/base.css
+++ b/client/base.css
@@ -1,4 +1,20 @@
-/* CSS declarations go here */
+/* Override browser default link coloration */
+a, a:visited, a:hover, a:active {
+  color: inherit;
+  text-decoration: none;
+}
+
+html, body {
+  margin:0;
+  height:100%;
+  min-height:100%;
+}
+
+body {
+  margin:0;
+  display: flex;
+  flex-direction: column;
+}
 
 .largeLayoutContainer {
 	display: flex;
@@ -15,12 +31,16 @@
 	flex: 1 0 auto;
 	display: flex;
 	flex-direction: row;
-	background-color: blue;
+	background-color: #8972B3;
+	align-items: center;
+
 }
 
 .lhItem {
-	width: 60px;
+	width: 80px;
+	font-weight: bold;
 	color: white;
+	text-align: center;
 }
 
 .listItem {
